--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Общие стили */
 body {
-    font-family: 'Cinzel', serif; /* Новый шрифт */
+    font-family: 'Cormorant Garamond', serif; /* Новый шрифт */
     background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
