--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Общие стили */
 body {
-    font-family: 'Cormorant Garamond', serif; /* Новый шрифт */
+    font-family: 'Cormorant Garamond', serif;
     background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
@@ -28,7 +28,12 @@ body {
 header {
     background-color: rgba(51, 51, 51, 0.2); /* Полупрозрачный фон */
     padding: 10px 0;
-    border-bottom: 2px solid #ffcc00;
+    border-bottom: 2px solid transparent; /* Убираем стандартную полосу */
+    background-image: linear-gradient( to right, transparent 20%, #b8860b 50%, /* Темно-золотой цвет */
+    transparent 80% );
+    background-size: 100% 2px; /* Высота полосы */
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 
 nav ul {
@@ -53,7 +58,7 @@ nav ul {
         }
 
             nav ul li a.active {
-                border-bottom: 2px solid #ffcc00; /* Подчеркивание для активной кнопки */
+                border-bottom: 2px solid #b8860b; /* Темно-золотое подчеркивание для активной кнопки */
             }
 
 main {
@@ -67,11 +72,18 @@ section {
     background-color: rgba(42, 42, 42, 0.2); /* Более прозрачный фон */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    max-width: 50%; /* Ограничиваем ширину */
+    margin-left: 0; /* Выравниваем по левому краю */
 }
 
 h2 {
-    color: #ffcc00;
-    border-bottom: 2px solid #ffcc00;
+    color: #fff; /* Белый цвет текста */
+    border-bottom: 2px solid transparent; /* Убираем стандартную полосу */
+    background-image: linear-gradient( to right, transparent 20%, #b8860b 50%, /* Темно-золотой цвет */
+    transparent 80% );
+    background-size: 100% 2px; /* Высота полосы */
+    background-position: bottom;
+    background-repeat: no-repeat;
     padding-bottom: 10px;
 }
 
@@ -79,6 +91,11 @@ footer {
     text-align: center;
     padding: 10px;
     background-color: rgba(51, 51, 51, 0.2); /* Полупрозрачный фон */
-    border-top: 2px solid #ffcc00;
+    border-top: 2px solid transparent; /* Убираем стандартную полосу */
+    background-image: linear-gradient( to right, transparent 20%, #b8860b 50%, /* Темно-золотой цвет */
+    transparent 80% );
+    background-size: 100% 2px; /* Высота полосы */
+    background-position: top;
+    background-repeat: no-repeat;
     margin-top: auto; /* Футер внизу */
 }
