--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: #fff; /* Белый текст */
+    color: #FFD700; /* Белый текст */
     margin: 0;
     padding: 0;
     line-height: 1.6;
