--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Общие стили */
 body {
-    font-family: 'Commissioner', serif;
+    font-family: 'Prompt', serif;
     background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
