--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ nav ul {
     }
 
         nav ul li a {
-            color: rgba(184, 134, 11, 0.5); /* Серый текст (полупрозрачный золотой) */
+            color: rgba(245, 222, 179, 0.5); /* Серый текст (полупрозрачный #F5DEB3) */
             text-decoration: none;
             font-weight: bold;
             font-size: 18px;
@@ -53,7 +53,7 @@ nav ul {
         }
 
             nav ul li a.active {
-                color: #B8860B; /* Золотой текст для активной кнопки */
+                color: #F5DEB3; /* Цвет текста для активной кнопки */
                 border-bottom: 2px solid transparent; /* Убираем стандартную полосу */
                 background-image: linear-gradient( to right, transparent 10%, /* Уменьшаем прозрачную область */
                 #B8860B 50%, /* Золотой цвет */
@@ -90,4 +90,14 @@ h2 {
     border-bottom: none; /* Убираем полосу */
     text-align: center; /* Выравниваем по центру */
     padding-bottom: 10px;
+    cursor: pointer; /* Курсор в виде указателя */
 }
+
+.skill-content {
+    display: none; /* По умолчанию скрываем контент */
+    padding-left: 20px; /* Отступ для вложенного текста */
+}
+
+    .skill-content.active {
+        display: block; /* Показываем контент при активации */
+    }
