--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,19 @@ h2 {
     .skill-content.active {
         display: block; /* Показываем контент при активации */
     }
+
+#image-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50%; /* Половина экрана */
+    height: 100vh; /* На всю высоту */
+    overflow: hidden; /* Скрываем выходящие за пределы части */
+    z-index: 1; /* Чтобы изображение было поверх других элементов */
+}
+
+    #image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Масштабируем изображение, чтобы оно заполнило контейнер */
+    }
