--- a/styles.css
+++ b/styles.css
@@ -140,10 +140,15 @@ h2 {
     height: 100vh; /* На всю высоту */
     overflow: hidden; /* Скрываем выходящие за пределы части */
     z-index: 1; /* Чтобы изображение было поверх других элементов */
+    display: flex;
+    justify-content: center; /* Центрируем по горизонтали */
+    align-items: center; /* Центрируем по вертикали */
 }
 
     #image-container img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; /* Масштабируем изображение, чтобы оно заполнило контейнер */
+        width: 50%; /* Ширина картинки */
+        height: auto; /* Автоматическая высота для сохранения пропорций */
+        object-fit: contain; /* Сохраняем пропорции */
+        max-width: 100%; /* Ограничиваем максимальную ширину */
+        max-height: 100%; /* Ограничиваем максимальную высоту */
     }
