--- a/styles.css
+++ b/styles.css
@@ -134,20 +134,20 @@ h2 {
 
 #image-container {
     position: fixed;
-    top: 0;
-    right: 0;
-    width: 30%; /* Уменьшили ширину контейнера */
-    height: 100vh;
-    overflow: hidden;
+    top: 50%; /* Смещаем контейнер на 50% от верха */
+    right: 0; /* Прижимаем к правому краю */
+    width: 20%; /* Ширина контейнера */
+    height: auto; /* Высота автоматическая */
+    transform: translateY(-50%); /* Центрируем по вертикали */
     z-index: 1;
     display: flex;
     justify-content: center;
-    align-items: center; /* Центрируем по вертикали */
+    align-items: center;
 }
 
     #image-container img {
-        width: 80%; /* Уменьшили ширину изображения */
-        height: auto;
+        width: 70%; /* Ширина изображения внутри контейнера */
+        height: auto; /* Сохраняем пропорции */
         object-fit: contain;
         max-width: 100%;
         max-height: 100%;
