--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,8 @@ h2 {
 #image-container {
     position: fixed;
     top: 50%; /* Смещаем контейнер на 50% от верха */
-    right: 0; /* Прижимаем к правому краю */
-    width: 20%; /* Ширина контейнера */
+    right: 5%; /* Отодвигаем контейнер левее на 5% от правого края */
+    width: 15%; /* Уменьшаем ширину контейнера */
     height: auto; /* Высота автоматическая */
     transform: translateY(-50%); /* Центрируем по вертикали */
     z-index: 1;
@@ -146,7 +146,7 @@ h2 {
 }
 
     #image-container img {
-        width: 70%; /* Ширина изображения внутри контейнера */
+        width: 60%; /* Уменьшаем ширину изображения внутри контейнера */
         height: auto; /* Сохраняем пропорции */
         object-fit: contain;
         max-width: 100%;
