--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,8 @@ h2 {
 #image-container {
     position: fixed;
     top: 50%; /* Смещаем контейнер на 50% от верха */
-    right: 35%; /* Отодвигаем контейнер левее на 5% от правого края */
-    width: 20%; /* Уменьшаем ширину контейнера */
+    right: 15%; /* Сдвигаем контейнер левее на 15% от правого края */
+    width: 20%; /* Увеличиваем ширину контейнера */
     height: auto; /* Высота автоматическая */
     transform: translateY(-50%); /* Центрируем по вертикали */
     z-index: 1;
@@ -146,9 +146,10 @@ h2 {
 }
 
     #image-container img {
-        width: 70%; /* Уменьшаем ширину изображения внутри контейнера */
+        width: 80%; /* Увеличиваем ширину изображения внутри контейнера */
         height: auto; /* Сохраняем пропорции */
         object-fit: contain;
         max-width: 100%;
         max-height: 100%;
     }
+
