--- a/styles.css
+++ b/styles.css
@@ -154,4 +154,15 @@ h2 {
         filter: brightness(70%); /* Затемняем картинку до 70% яркости */
     }
 
+a {
+    color: #B8860B; /* Устанавливаем золотой цвет для ссылок */
+    text-decoration: none; /* Убираем подчеркивание */
+    transition: color 0.3s ease; /* Плавное изменение цвета при наведении */
+}
+
+    a:hover {
+        color: #F5DEB3; /* Более светлый оттенок при наведении (например, #F5DEB3) */
+    }
+
+
 
