--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ section {
     margin-bottom: 40px;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: none; /* Убираем тени */
+    box-shadow: 0 0 0 1px #B8860B; /* Тонкая обводка цвета #B8860B */
     max-width: 50%; /* Ограничиваем ширину */
     margin-left: 0; /* Выравниваем по левому краю */
     background-color: rgba(42, 42, 42, 0.2); /* Полупрозрачный фон */
@@ -131,11 +131,12 @@ h2 {
     margin-bottom: 10px; /* Отступ между заголовками */
     cursor: pointer; /* Курсор в виде указателя */
     transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Плавное изменение фона и тени */
+    box-shadow: 0 0 0 1px #B8860B; /* Тонкая обводка цвета #B8860B */
 }
 
     .skill-header:hover {
         background-color: rgba(66, 66, 66, 0.4); /* Подсветка при наведении */
-        box-shadow: 0 0 10px rgba(184, 134, 11, 0.5); /* Подсветка по краям */
+        box-shadow: 0 0 10px rgba(184, 134, 11, 0.5), 0 0 0 1px #B8860B; /* Сохраняем обводку при наведении */
     }
 
 .skill-content {
