--- a/styles.css
+++ b/styles.css
@@ -194,5 +194,19 @@ a {
     pointer-events: none; 
 }
 
+#mobile-message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5em;
+    z-index: 1000;
+}
 
 
